--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -62,12 +62,12 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
+  /* font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif; */
   letter-spacing: -1px;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 72px;
   font-weight: 700;
 }
 
@@ -399,7 +399,7 @@ Small Device Styles
   }
 
   h1 {
-    /*font-size: 28px; */
+    font-size: 28px; 
   }
 
   h2 {
