--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -52,7 +52,7 @@ body {
   box-sizing: border-box;
   color:#373737;
   background: #212121;
-  font-size: 16px;
+  /*font-size: 16px; */
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
@@ -67,8 +67,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  /*
   font-size: 72px;
   font-weight: 700;
+  */
 }
 
 h2 {
