--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -61,8 +61,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
-  font-weight: 700;
+  margin: 10px;
+  font-weight: 100;
   color:#222222;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif; */
   letter-spacing: -1px;
