--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -61,8 +61,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 10px;
-  font-weight: 0;
+  margin: 5px;
+  font-weight: 100px;
   color:#222222;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif; */
   letter-spacing: -1px;
@@ -273,8 +273,8 @@ Full-Width Styles
 
 .inner { 
   position: relative;
-  max-width: 640px;
-  padding: 20px 10px;
+  max-width: 840px;
+  padding: 0px 10px;
   margin: 0 auto;
 }
 
@@ -303,7 +303,7 @@ Full-Width Styles
 }
 
 #header_wrap .inner {
-  padding: 20px 10px 20px 10px;
+  padding: 5px 10px 5px 10px;
 }
 
 #project_title {
