--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -294,6 +294,7 @@ Full-Width Styles
 }
 
 #header_wrap {
+  max-height: 1000px;
   background: #DCDCDC;
   background: -moz-linear-gradient(top, #373737, #212121);
   background: -webkit-linear-gradient(top, #373737, #212121);
