--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -265,6 +265,7 @@ Full-Width Styles
 }
 
 #header_wrap {
+  border-radius: 12px;
   background: #DCDCDC;
   background: -moz-linear-gradient(top, #373737, #212121);
   background: -webkit-linear-gradient(top, #373737, #212121);
