--- a/jay.css
+++ b/jay.css
@@ -20,8 +20,7 @@ body {
     }
     p{  
         font-family: 'Economica', sans-serif; /* set fonts for header 1 */ 
-        border-radius: 5px;
-        padding: 10px;
+        font-size: 18px;
     } 
     h1 { 
       color: rgb(143,250,255); /* Change to modify header 1 colors */
@@ -69,6 +68,8 @@ body {
     }
 
     .greyLay{
+      border-radius: 5px;
+      padding: 10px;
       background-color: rgb(200,200,200);
     }
 
