--- a/jay.css
+++ b/jay.css
@@ -19,9 +19,9 @@ body {
 
     }
     p{  
-        font-family: 'Economica', sans-serif; /* set fonts for header 1 */ 
         font-size: 20px;
         min-height: 600px;
+        font-family: 'Open Sans', sans-serif;
 
     }
 
