--- a/jay.css
+++ b/jay.css
@@ -20,9 +20,14 @@ body {
     }
     p{  
         font-size: 20px;
-        min-height: 600px;
+        min-height: 500px;
         font-family: 'Open Sans', sans-serif;
+    }
 
+    p .pod
+    {
+    min-height:300px;
+    height: 300px;
     }
 
     h1 { 
