--- a/jay.css
+++ b/jay.css
@@ -20,10 +20,14 @@ body {
     }
     p{  
         font-size: 20px;
-        height: 500px;
         font-family: 'Open Sans', sans-serif;
     }
 
+    p .oversize
+    {
+    height: 500px;
+
+    }
     p .pod
     {
     height: 300px;
