--- a/jay.css
+++ b/jay.css
@@ -26,7 +26,7 @@ body {
 
     p.oversize
     {
-    height: 510px;
+    height: 300px;
 
     }
     p.pod
@@ -49,21 +49,19 @@ body {
       word-spacing: 5px;
     }
     h2 { 
-      max-width: 80%;
+      max-width: 40%;
       color: #F0F0F0;
       font-family: 'Economica', sans-serif; /* set fonts for header 2 */ 
-      text-align: left; /* centers header 2 */
       font-size: 40px; /* Change to modify header1 font size */
-      margin: 0px 0px 0px 0px; /* margin none */
+      margin: 0 auto; /* margin auto */
       margin-bottom: 10px; 
     }
     h3 {
-      max-width: 80%;
+      max-width: 40%;
       color: #bbbbbb;
       font-family: 'Kaushan Script', cursive; /* set fonts for header 3 */ 
-      text-align: left; /* makes all header3 swing to the left */
       font-size: 20px; /* Change to modify header1 font size */
-      margin: 0px 0px 0px 0px; /* margin none */
+      margin: 0 auto;
     }
 
     h4 {
