--- a/jay.css
+++ b/jay.css
@@ -1,15 +1,19 @@
 body {
       margin: 0 auto;
       background-color: #3A3A3A; 
-      font-size: 18px; 
+      font-size: 16px; 
       font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
       /* line-height: 1.5;  Change this to modify line height in the body */ 
       /*background: #F8F8FF;  Change to modify background color */ 
     }
 
   body::after{
-background: url("images/bg.jpg");
-  opacity: 0.2;
+background: url("images/bg.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  opacity: 0.3;
   top: 0;
   left: 0;
   bottom: 0;
@@ -33,7 +37,7 @@ background: url("images/bg.jpg");
     }
     p{  
         height: 0px;
-        font-size: 20px;
+        font-size: 16px;
         font-family: 'Open Sans', sans-serif;
     }
 
@@ -133,11 +137,11 @@ background: url("images/bg.jpg");
     }
     /* ------------ ID (#id) ------------------*/ 
     #about{
-        height: 270px;
+        height: 370px;
     } 
 
     #experience{
-      height: 300px;
+      height: 500px;
 
     } 
 
