--- a/jay.css
+++ b/jay.css
@@ -139,20 +139,27 @@ background: url("images/bg.jpg") no-repeat center center fixed;
     /* ------------ ID (#id) ------------------*/ 
     #about{
         height: 570px;
-        border: 2px red;
+        border: 10px;
+        border-color: red;
     } 
 
     #experience{
       height: 500px;
+         border: 10px;
+        border-color: green;
 
     } 
 
     #resume{
       height: 400px;
+         border: 10px;
+        border-color: blue;
 
     }
     #navBarAllocation{
     	height: 150px;
+         border: 10px;
+        border-color: yellow;
     }
 
     /* This section is for the about me portion of this page */
