--- a/jay.css
+++ b/jay.css
@@ -140,12 +140,14 @@ background: url("images/bg.jpg") no-repeat center center fixed;
     #about{
         height: 570px;
         border: 10px;
+        border-style: solid;
         border-color: red;
     } 
 
     #experience{
       height: 500px;
          border: 10px;
+         border-style: solid;
         border-color: green;
 
     } 
@@ -153,12 +155,14 @@ background: url("images/bg.jpg") no-repeat center center fixed;
     #resume{
       height: 400px;
          border: 10px;
+         border-style: solid;
         border-color: blue;
 
     }
     #navBarAllocation{
     	height: 150px;
          border: 10px;
+         border-style: solid;
         border-color: yellow;
     }
 
