--- a/jay.css
+++ b/jay.css
@@ -1,19 +1,20 @@
 body {
       margin: 0 auto;
       background-color: #3A3A3A; 
+      background: url("images/bg.jpg") no-repeat center center fixed; 
       font-size: 16px; 
       font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
       /* line-height: 1.5;  Change this to modify line height in the body */ 
       /*background: #F8F8FF;  Change to modify background color */ 
     }
 
-     body::after{
-background: url("images/bg.jpg") no-repeat center center fixed; 
+     /*body::after{
+  background: url("images/bg.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  opacity: 1;
+  opacity: 0.2;
   top: 0;
   left: 0;
   bottom: 0;
@@ -22,7 +23,7 @@ background: url("images/bg.jpg") no-repeat center center fixed;
   z-index: -1;  
   content: "";
 
-  }
+  }*/
 
 
       header{
