reverting back to just see that image

--- a/jay.css
+++ b/jay.css
@@ -7,13 +7,13 @@ body {
       /*background: #F8F8FF;  Change to modify background color */ 
     }
 
-     /*body::after{
+     body::after{
   background: url("images/bg.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  opacity: 0.2;
+  opacity: 1;
   top: 0;
   left: 0;
   bottom: 0;
@@ -137,22 +137,10 @@ body {
       border-radius: 12px;
     }
     /* ------------ ID (#id) ------------------*/ 
-    #bgplace
-    {
-      background: url("images/bg.jpg") no-repeat center center fixed; 
-        -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  opacity: 0.2;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-    }
+  
 
     #about{
-      opacity: 1;
+
         height: 430px;
         border: 10px;
         border-style: solid;
@@ -238,6 +226,7 @@ body {
 		font-family: 'Economica', sans-serif;
 
     }
+
 }
 
 
