--- a/jay.css
+++ b/jay.css
@@ -13,7 +13,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  opacity: 1;
+  opacity: 0.2;
   top: 0;
   left: 0;
   bottom: 0;
@@ -22,7 +22,7 @@ body {
   z-index: -1;  
   content: "";
   height: 100%;
-  }*/
+  }
 
 
       header{
