--- a/jay.css
+++ b/jay.css
@@ -186,6 +186,14 @@ margin-bottom: -100px;
 width: 100%;
 height: 40px;
 }
+
+#resumeButton2
+{
+margin: 0 auto;
+margin-bottom: -300px;
+width: 110%;
+height: 40px;
+}
     /* This section is for the about me portion of this page */
 
     @media (max-width: 500px)  {
