--- a/jay.css
+++ b/jay.css
@@ -194,6 +194,35 @@ margin-bottom: 20px;
 width: 100%;
 height: 40px;
 }
+
+.imaged { 
+   position: relative; 
+   width: 100%; /* for IE 6 */
+}
+
+h5 { 
+   position: absolute; 
+   top: 200px; 
+   left: 0; 
+   width: 100%; 
+}
+
+h5 span { 
+   color: white; 
+   font: bold 24px/45px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+}
+
+h5 span.spacer {
+   padding:0 5px;
+}
+
+
+
+
     /* This section is for the about me portion of this page */
 
     @media (max-width: 500px)  {
