--- a/jay.css
+++ b/jay.css
@@ -195,31 +195,18 @@ width: 100%;
 height: 40px;
 }
 
-.imaged { 
-   position: relative; 
-   width: 100%; /* for IE 6 */
+#welcome-Banner {
+margin: 0 auto;
+width: 50%;
+height: auto;
 }
 
-h5 { 
-   position: absolute; 
-   top: 200px; 
-   left: 0; 
-   width: 100%; 
+#welcomeBannerImage
+{
+height: 100%;
+width: 100%;
+margin: 0 auto;
 }
-
-h5 span { 
-   color: white; 
-   font: bold 24px/45px Helvetica, Sans-Serif; 
-   letter-spacing: -1px;  
-   background: rgb(0, 0, 0); /* fallback color */
-   background: rgba(0, 0, 0, 0.7);
-   padding: 10px; 
-}
-
-h5 span.spacer {
-   padding:0 5px;
-}
-
 
 
 
