--- a/jason.css
+++ b/jason.css
@@ -12,15 +12,21 @@ border-radius: 12px;
 }
 
 h3
+{	
+	text-align: center;
+	margin: 10px;
+}
+
+h4
 {
-	margin: 0 auto;
+
+	font-size: 20px;
 }
 
 
   @media (max-width: 600px)  {
 
-#centerSmall{
-	margin: 0 auto;
+#centerSmall{ /* Applies to only text to center it, resizing can be done elsewhere */
 	text-align: center;
 }
 
