Added some basic javascript.

--- a/jason.css
+++ b/jason.css
@@ -40,6 +40,19 @@ h4
 	font-size: 25px;
 }
 
+.descBox
+{
+	width:100%;
+}
+
+#game1{
+
+}
+
+#game2{
+
+}
+
 #g1-box {
     clear: both;
     background: #ffcc00;
