--- a/jason.css
+++ b/jason.css
@@ -1,4 +1,15 @@
 
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
+
 .navSpec
 {
 font-size: 20px;
